fixed on mobile

--- a/src/pages/work/popunk/popunk.css
+++ b/src/pages/work/popunk/popunk.css
@@ -1027,9 +1027,9 @@ p,
         right: 320px;
     }
 
-    .floating-overlay4 {
-        width: 30vw;
-        top: 769px;
+    .popunk-floating-overlay4 {
+        width: 25vw;
+        top: 658px;
         right: 5px;
     }
 
